<resources>
    <string name="app_name">NASA</string>
    <string name="change_date">Change Date</string>
    <string name="explanation">Explanation</string>
    <string name="input_text">Search definition</string>
    <string name="select_date">Select date</string>
    <string name="animation">Animation</string>
    <string name="background_image">Background Image</string>
    <string name="list_of_dates">List of dates</string>
    <string name="days_list">Days list</string>
</resources>