<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NasaApodOldFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_view"
            app:layout_constraintBottom_toBottomOf="@id/image_view"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/custom_progress_bar"/>

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent=".5"
            android:contentDescription="@string/app_name"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/picture_title"
            style="@style/titleBlock"
            android:layout_margin="@dimen/normal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_merriam_webster"
            app:endIconCheckable="true"
            app:layout_constraintTop_toBottomOf="@id/picture_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input"
                style="@style/text_input"
                android:hint="@string/input_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/change_date_fab"
            style="@style/textBlock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/tabs_height"
            android:text="@string/change_date"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottom_sheet"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>