<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".ui.NasaApodOldFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/apodAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/apodToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/apodToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="none"/>

            <ProgressBar
                android:id="@+id/loadingProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/custom_progress_bar"
                app:layout_collapseMode="parallax"/>

            <ImageView
                android:id="@+id/apodImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="false"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/app_name"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/apodTitle"
                style="@style/titleBlock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/apodCopyright"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/apodCopyright"
                style="@style/textBlock"
                app:fontFamily="@font/alex_brush"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apodTitle"
                app:layout_constraintBottom_toTopOf="@id/apodDate"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/apodDate"
                style="@style/textBlock"
                android:alpha=".7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apodCopyright"
                app:layout_constraintBottom_toTopOf="@id/apodExplanation"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/apodExplanation"
                style="@style/textBlock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apodDate"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/changeDateFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        app:layout_anchor="@id/scrollView"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/baseline_calendar_month_24"
        android:contentDescription="@string/change_date"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/daysListFab"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        app:layout_anchor="@id/scrollView"
        app:layout_anchorGravity="bottom|start"
        app:icon="@drawable/baseline_view_list_24"
        android:text="@string/days_list"
        android:backgroundTint="?android:colorBackground"
        android:elevation="@dimen/normal_margin"
        android:contentDescription="@string/list_of_dates"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>